<resources>
    <string name="app_name">Marvel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">Email</string>
    <string name="create_account">Create account</string>
    <string name="welcome_to_the_marvel_hq_s">Welcome to the Marvel HQ´s</string>
    <string name="nome">Name</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="remember">Remember</string>
    <string name="field_required">%1$s é de preenchimento obrigatório</string>
    <string name="email">email</string>
    <string name="msg_invalid_email">Email inválido</string>
    <string name="register">SAVE</string>
    <string name="name">Name</string>
</resources>