<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:id="@+id/layoutBackgroundLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/bg_shape_red_login"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_to_the_marvel_hq_s"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFrontLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/bg_shape_login_white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/layoutBackgroundLogin"
        app:layout_constraintEnd_toEndOf="@id/layoutBackgroundLogin"
        app:layout_constraintStart_toStartOf="@id/layoutBackgroundLogin"
        app:layout_constraintTop_toTopOf="@id/layoutBackgroundLogin" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="24dp"
            android:id="@+id/tilEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbRegister"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/remember"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:background="@color/red_200"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_margin="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"/>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>