<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">





        <LinearLayout
            android:id="@+id/layoutBackgroundLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/bg_shape_red_login"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">





        </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user"
        android:padding="20dp"
        android:background="@drawable/bg_user"
        app:layout_constraintBottom_toTopOf="@id/layoutFrontLogin"
        app:layout_constraintStart_toStartOf="@id/layoutFrontLogin"
        app:layout_constraintEnd_toEndOf="@id/layoutFrontLogin"
        android:layout_marginBottom="36dp"
        />

        <LinearLayout
            android:id="@+id/layoutFrontLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/bg_shape_login_white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/layoutBackgroundLogin"
            app:layout_constraintEnd_toEndOf="@id/layoutBackgroundLogin"
            app:layout_constraintStart_toStartOf="@id/layoutBackgroundLogin"
            app:layout_constraintTop_toTopOf="@id/layoutBackgroundLogin" >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/nome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="15dp"
                android:id="@+id/tilEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:background="@color/red_200"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="SAVE"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>






        </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>